Bug 785060 - Check for allocation failure in JS_NewUCStringCopyZ calls; r=Ms2ger